trying to fix overflow  error

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html, body {
   @apply overscroll-none;
   scroll-behavior: smooth;
   overflow-x: hidden; /* Prevents horizontal scrolling */
-  position:
+  width: 100vw;
+  max-width: 100vw;
 }
